# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = DAISY students
author_email = yourname@hs-duesseldorf.de
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = old-school text adventure
keywords =
    keyword1
    keyword2
long_description = file: README.md
long_description_content_type = text/markdown
name = zdd_adventure
project_urls =
    Bug Tracker = https://github.com/ZDDduesseldorf/zz-adventure/issues
url = https://github.com/ZDDduesseldorf/zz-adventure
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest
    pytest-cov
publishing =
    twine
    wheel

[options.packages.find]
include = zdd_adventure, zdd_adventure.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = zdd_adventure
src_paths = zdd_adventure,tests
line_length = 120
